Creacion de estadistica

--- a/final-modulo2/tienda.html
+++ b/final-modulo2/tienda.html
@@ -18,6 +18,7 @@
         <a href="index.html" class="mr-2">Inicio</a>
         <a href="tienda.html" class="mr-2">Tienda</a>
         <a href="contacto.html" class="mr-2">Contacto</a>
+        <a href="estadistica.html" class="mr-2">Estadisticas</a>
         <a href="https://www.google.com">Salir</a>
     </nav>
     <main>
